--- a/package.json
+++ b/package.json
@@ -1,5 +1,19 @@
 {
   "dependencies": {
-    "discord.js": "^14.11.0"
-  }
+    "discord.js": "^14.11.0",
+    "dotenv": "^16.1.4"
+  },
+  "name": "bot-discord",
+  "version": "1.0.0",
+  "description": "Bot for discord",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "bot",
+    "discord"
+  ],
+  "author": "Gabriel Palheiro",
+  "license": "ISC"
 }
